tests/expectations/compiler/tuple/function_return_single_fail.out
DCE_ENABLED:
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> compiler-test:8:16
     |
   8 |         return (b,);
     |                ^^^^

DCE_DISABLED:
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> compiler-test:8:16
     |
   8 |         return (b,);
     |                ^^^^
